tests/script_runtime_errors/bad_fold_op_record/error.txt
Error: 
    1 | for event of
    2 |   case (k, v) => {"#{k}": v}
      |                  ^^^^^^^^^^^ Invalid fold operation / for records
    3 | into {} use / end